added blog mechanism

--- a/app/views/members/account_edit.html.erb
+++ b/app/views/members/account_edit.html.erb
@@ -6,5 +6,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show',  account_path(@member) %>
+<%= link_to 'Show', account_path(@user.member.id) %>
 <%#= link_to 'Back', members_list_path %>
