--- a/app/views/sidebars/_members.html.erb
+++ b/app/views/sidebars/_members.html.erb
@@ -4,12 +4,12 @@
 
 <p>Active</p>
 <ul>
+  <li><%= link_to "Bulletin Board", posts_path %></li>
   <li><%= link_to "Membership", members_list_path %></li>
   <li><%= link_to "Account/Profile", account_path(@user.member.id) %></li>
 </ul>
 <p>Coming Soon</p>
 <ul>
-  <li>Forum</li>
   <li>Event Sign-up</li>
   <li>Documents</li>
 </ul>
