--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,14 +10,14 @@
 
 <% @posts.each do |post| %>
 
-    <h2><%= link_to post.title, post %></h2>
+    <h1 class="post"><%= link_to post.title, post %></h1>
     <p><%= simple_format(post.content) %></p>
-    <p><em><%= post.created_at.strftime("%B %d, %Y") %></em> | <em>Categories: 
+    <p class="post_parameters"><%= post.created_at.strftime("%B %d, %Y") %> | Categories: 
     
     <% post.categories.each do |category| %>
       <%= category.name %> 
     <%end %>
-    </em> | <em>posted by: <% if post.user_id? %><%= post.user.member.first_name %> <%= post.user.member.last_name.first %>.<% end %></em></p>
+     | posted by: <% if post.user_id? %><%= post.user.member.first_name %> <%= post.user.member.last_name.first %>.<% end %></p>
     <%#= link_to 'Edit', edit_post_path(post) %>
     <%#= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %>
     <hr />
