updated events views and video gallery formatting

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -61,6 +61,12 @@
     <%= f.text_field :URL %>
   </div>
   </div>
+  <div class="cell">
+    <div class="field">
+    <%= f.label :graphic_address, "Graphic Filename" %><br />
+    <%= f.text_field :graphic_address %>
+  </div>
+  </div>
 </div>
 <div class="clearer"></div>
 
