--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.date_select :date %>
   </div>
   <div class="field">
+    <%= f.label :video_graphic %><br />
+    <%= f.text_field :video_graphic %>
+  </div>
+  <div class="field">
     <%= f.label :source %><br />
     <%= f.text_field :source %>
   </div>
