--- a/public/stylesheets/web_style.css
+++ b/public/stylesheets/web_style.css
@@ -603,3 +603,53 @@ img.fr {
   color:#fff;
   background: #1d2644;
   }
+
+.event_graphic {
+  float: right;
+  }
+
+#calendar {
+  float: right;
+  width: 97px;
+  height: 97px;
+  background:  url("../images/calendar_graphic.jpg") no-repeat top left;
+  }
+
+#calendar_month {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin: -5px 0 0 0;
+  padding-top: 0px;
+  color: #fff;
+  }
+
+#calendar_date {
+  text-align: center;
+  font-size: 48px;
+  font-weight: bold;
+  margin: -5px 0 0 0;
+  padding-top: 0px;
+  color: #000;
+  }
+
+#calendar_year {
+  text-align: center;
+  font-size: 10px;
+  font-weight: bold;
+  padding-top: 3px;
+  color: #fff;
+  }
+
+#calendar_day {
+  text-align: center;
+  font-size: 10px;
+  font-weight: bold;
+  margin: -2px 0 0 0;
+  padding-top: 0px;
+  color: #fff;
+  }
+
+
+
+
