added social media icons ot home page

--- a/app/views/pages/_hp_about.html.erb
+++ b/app/views/pages/_hp_about.html.erb
@@ -6,6 +6,10 @@
 
 <p>We encourage you to explore our site to learn more about PBJs, the Squadron and the Commemorative Air Force.</p>
 
+<div class="social_icons">
+  <%= link_to image_tag('twitter_icon.png'), 'http://twitter.com/#!/DevilDog_PBJ', :target => "_blank" %>
+  <%= link_to image_tag('facebook_icon.png'), 'http://www.facebook.com/pages/Commemorative-Air-Force-B-25-Devil-Dog/118844394867108', :target => "_blank" %>
+</div>
 <div align="right"><p><%= link_to "Read more about Devil Dog Squadron...", pages_squadron_path %></p></div>
 
 </div>
