--- a/app/views/pages/_hp_feed_the_dog.html.erb
+++ b/app/views/pages/_hp_feed_the_dog.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="ftd_right_cell">
     <div align="center"> 
-  <%= link_to image_tag('home_tshirt.jpg'), px_path %>
+  <%= link_to image_tag('home_tshirt.jpg', :border => 'none'), px_path %>
   <%= link_to "Visit our PX", px_path %>
   </div>
   </div>
