--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -12,7 +12,7 @@
 
 
   <div class="photo_cell">
-    <%= image_tag 'photos/'+ gallery.gallery_pic %>
+    <%= link_to (image_tag 'photos/'+ gallery.gallery_pic), gallery %><br />
     <%= link_to gallery.gallery_name, gallery %><br />
     <%= gallery.description %>
     <% if session[:current_user] %><br /><%= link_to 'Edit', edit_gallery_path(gallery) %><% end %>
