--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,19 +1,8 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <b>Gallery category:</b>
-  <%= @gallery.gallery_category.category_name %>
+<h1><%= @gallery.gallery_name %></h1>
 </p>
 
-<p>
-  <b>Gallery name:</b>
-  <%= @gallery.gallery_name %>
-</p>
-
-<p>
-  <b>Description:</b>
-  <%= @gallery.description %>
-</p>
+<p><%= @gallery.description %></p>
 
 <% @gallery.photos.each_with_index do |photo, i| %>
 <% if i == 0 || i % 3 == 0 %>
@@ -23,7 +12,7 @@
 
   <div class="photo_cell">
     <%= link_to (image_tag 'photos/'+ photo.path + '/thumbs/' + photo.filename), photo_path(photo) %><br />
-    <%= photo.photo_title %>
+    <%= photo.description %>
   </div>
 
 <% if i > 0 && i == 2 || i == 5 || i == 8 || i == 11 || i == 14 || i == 17 || i == 20 || i == 23 || i == 26 || i == 29 || i == 32 || i == 35 || i == 38 || i == 41 || i == 44 || i == 47 %>
