--- a/app/views/videos/video_gallery.html.erb
+++ b/app/views/videos/video_gallery.html.erb
@@ -11,8 +11,8 @@
 
 
   <div class="photo_cell">
-    <%= image_tag video.video_graphic %>
-    <%= link_to link_to video.title, video %><br />
+    <%= link_to (image_tag video.video_graphic), video %>
+    <%= link_to video.title, video %><br />
     <%= video.date.strftime("%b %d, %Y") %> - <%= video.source %>
     <% if session[:current_user] %><br /><%= link_to 'Edit', edit_video_path(video) %><% end %>
   </div>
