added users controller views to enable password changes

--- a/app/views/members/account.html.erb
+++ b/app/views/members/account.html.erb
@@ -46,6 +46,6 @@
 </div>
 </div>
 
-<%= link_to 'Edit', account_edit_path(@member) %> |
-<%= link_to 'Back', pages_member_home_path %>
+<%= link_to 'Edit / Make Updates', account_edit_path(@member) %> | 
+<%= link_to 'Member Home', pages_member_home_path %>
 
