--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,6 +46,7 @@
             <li><%= link_to 'Bulletin Board', posts_path %></li>
             <li><%= link_to 'Members List', members_list_path %></li>
             <li><%= link_to "Account/Profile", account_path(User.find(session[:current_user]).member.id) %></li>
+            <li><%= link_to 'Password', change_password_path(session[:current_user]) %></li>
             <li><%= link_to 'Logout', logout_path, :method => :delete %></li>
           </ul>
         <% end %></li>
