updated members models for opening up membership

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -17,6 +17,12 @@
 <div class="indent_row">
   <div class="cell">
   <div class="field">
+    <%= f.label :active %><br />
+    <%= f.check_box :active %>
+  </div>
+</div>
+<div class="indent_row">
+  <div class="field">
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name %>
   </div>
