created branch to work on pwd reset

--- a/app/views/sidebars/_pwd_reset.html.erb
+++ b/app/views/sidebars/_pwd_reset.html.erb
@@ -4,7 +4,7 @@
 <p class="error">Not working yet...</p>
 <p>Enter your email below to have your password reset.</p>
 
-<%= form_tag sessions_path do %> 
+<%= form_for :user do |f| %>
 
 <div align="center">
 <table width="200" class="table_border">
