--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New event</h1>
 
+<p><%= link_to 'Enter a new location', locations_path %></p>
 <%= render 'form' %>
 
 <%= link_to 'Back', events_path %>
