added untracked files

--- a/app/views/members/account_edit.html.erb
+++ b/app/views/members/account_edit.html.erb
@@ -4,7 +4,7 @@
 
 <h1>Edit Account</h1>
 
-<%= render 'form' %>
+<%= render 'account_form' %>
 
-<%= link_to 'Show', account_path(@user.member.id) %>
+<%#= link_to 'Show', account_path(@user.member.id) %>
 <%#= link_to 'Back', members_list_path %>
