--- a/app/views/sidebars/_members.html.erb
+++ b/app/views/sidebars/_members.html.erb
@@ -7,8 +7,9 @@
   <li><%= link_to "Bulletin Board", posts_path %></li>
   <li><%= link_to "Membership", members_list_path %></li>
   <li><%= link_to "Account/Profile", account_path(@user.member.id) %></li>
+  <li><%= link_to "Change Password", change_password_path(session[:current_user]) %></li>
 </ul>
-<p>Coming Soon</p>
+<p>Coming Soon?</p>
 <ul>
   <li>Event Sign-up</li>
   <li>Documents</li>
