updated logic to events published, added f-18 funfact sidebar

--- a/app/views/pages/PBJs.html.erb
+++ b/app/views/pages/PBJs.html.erb
@@ -1,3 +1,7 @@
+<% content_for :sidebar do %>
+  <%= render "sidebars/f_18" %>
+<% end %>
+
 <h1>History of PBJs</h1>
 
 <p>Not many people know that the US Marine Corps flew bombers in WWII. One of the missions of the Devil Dog Squadron is to keep that piece of history alive.</p>
