--- a/app/views/pages/F1.html.erb
+++ b/app/views/pages/F1.html.erb
@@ -4,13 +4,17 @@
 
 <h1>F1 Fantasy Flights</h1>
 
-<%= image_tag 'f1.jpg', :align => 'right' %>
-<p>The Devil Dog Squadron is planning special flight ops for visitors of the Austin F1.</p>
+<div class="sidebar_right" style="width: 330px; text-align: center;">
+<iframe width="330" height="186" src="http://www.youtube.com/embed/H_LmC6OR2Z4" frameborder="0" allowfullscreen></iframe>
+<a href="/pdf/F1_brochure.pdf">see our brochure</a>
+</div>
+
+<p>The Devil Dog Squadron is planning special flight ops the week of November 11th for visitors of the Austin F1 Grand Prix at Circuit of the Americas.</p>
 
 <p>Experience the power as the Devil Dog's 2 x 42.7 Liter engines produce ~3,400 horsepower &#8211; greater than 3X the power of an F1 car.</p>
 
-<p>Our F1 flights will overfly the COTA racetrack, watch practice runs from this unique perspective...</p>
+<p>Our F1 flights offer a unique perspective as we overfly the Austin area and COTA racetrack.</p>
 
-<p>The Devil Dog Squadron is a volunteer organization of the <a href="http://www.commemorativeairforce.org/">CAF</a>, dedicated to flying, maintaining and preserving a WWII B-25 bomber, the Devil Dog. The Devil Dog represents a PBJ, the Marine Corps version of a B-25.</p>
+<p>The Devil Dog Squadron is a volunteer organization of the <a href="http://www.commemorativeairforce.org/">Commemorative Air Force, CAF</a>, dedicated to flying, maintaining and preserving a WWII B-25 bomber, the Devil Dog. The Devil Dog represents a PBJ, the Marine Corps version of a B-25.</p>
 
 <p>Let us know your interest at <a href="mailto:info@devildogsquadron.com">f1_flights@devildogsquadron.com</a> and a representative will contact you with details.</p>
