--- a/app/views/pages/F1.html.erb
+++ b/app/views/pages/F1.html.erb
@@ -2,7 +2,7 @@
   <%= render "sidebars/calendar" %>
 <% end %>
 
-<h1>F1 Living History Experience</h1>
+<h1>F1 Heritage Flight Experience</h1>
 
 <div class="sidebar_right" style="width: 330px; text-align: center;">
 <iframe width="330" height="186" src="http://www.youtube.com/embed/H_LmC6OR2Z4" frameborder="0" allowfullscreen></iframe>
