updated paypal donation button

--- a/app/views/pages/_hp_feed_the_dog.html.erb
+++ b/app/views/pages/_hp_feed_the_dog.html.erb
@@ -8,11 +8,13 @@
   <div class="ftd_left_cell">
     <div align="center">
     <img src="images/dog_bowl.jpg" width="151" height="93" />
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="donateform"> 
-      <input type="image" src="https://www.paypal.com/en_US/i/btn/x-click-but21.gif" border="0" name="submit" alt="Make payments with PayPal - it's fast, free and secure!" /> 
-      <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="DFVG4GSRFQUKN">
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>
     </div>
-    </form> 
   </div>
   <div class="ftd_right_cell">
     <div align="center"> 
