--- a/app/views/pages/member_home.html.erb
+++ b/app/views/pages/member_home.html.erb
@@ -1,5 +1,5 @@
 <% content_for :sidebar do %>
-  <%#= render "sidebars/members" %>
+  <%= render "sidebars/members" %>
 <% end %>
 
 <% if notice %>
