--- a/public/stylesheets/web_style.css
+++ b/public/stylesheets/web_style.css
@@ -168,6 +168,9 @@ div.clearer {
         margin: 70px 0 20px 30px;
         background: #fff url("../images/planform_sidebar.gif") repeat-y top right;
         border: 1px solid #000;
+        font-family: Verdana, Helvetica, sans-serif;
+        font-size: 12px;
+        color: #333333;
         }
 
 /* ------------------------------- */
@@ -181,15 +184,11 @@ div.clearer {
         padding-right: 20px;
         background: #fff;
         border-right: 1px solid #999;
-        font-family: Verdana, Helvetica, sans-serif;
-        font-size: 12px;
-        color: #333333;
         }
 
 .content-left h1 {
         font-size: 18px;
         color: #0b2040;
-
         }
  
  .content-left h2 {
@@ -200,7 +199,12 @@ div.clearer {
  
 .content-left p {
         line-height: 1.6;
+        }
 
+.content-wide {
+        float: left;
+        width: 800px;
+        margin: 20px 10px;
         }
 
 /* -------------------------------- */
