updated maps with new key

--- a/app/views/layouts/map_layout.html.erb
+++ b/app/views/layouts/map_layout.html.erb
@@ -8,7 +8,7 @@
   <%#= csrf_meta_tags %>
 
 
-    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAiTFcJkd_eSU6ri4T1qUNwBSf2h5zKfqJATzLpNqFrRuH33ymKBT3yJPY8AIBbZR0ih0EzA-XY7UzjA"
+    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
       type="text/javascript"></script>
     <script type="text/javascript">
     var map;
@@ -24,68 +24,68 @@
 
 
 	var marker1 = new GMarker(new GLatLng(31.1519004,-97.4076629));
-	GEvent.addListener(marker1, 'click', function() { marker1.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Central Texas Airshow<br />Temple, TX</div></div>"); });
+	GEvent.addListener(marker1, 'click', function() { marker1.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Central Texas Airshow</strong><br />Temple, TX</div></div>"); });
 	map.addOverlay(marker1);
 
 	var marker2 = new GMarker(new GLatLng(40.1325833,-83.7535278));
-	GEvent.addListener(marker2, 'click', function() { marker2.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Gathering of B-25s<br />Urbana, OH</div></div>"); });
+	GEvent.addListener(marker2, 'click', function() { marker2.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Gathering of B-25s</strong><br />Urbana, OH</div></div>"); });
 	map.addOverlay(marker2);
 
 	var marker3 = new GMarker(new GLatLng(32.0280556,-96.4005833));
-	GEvent.addListener(marker3, 'click', function() { marker3.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>14th Annual Corsicana Airsho<br />Corsicana, TX</div></div>"); });
+	GEvent.addListener(marker3, 'click', function() { marker3.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>14th Annual Corsicana Airsho</strong><br />Corsicana, TX</div></div>"); });
 	map.addOverlay(marker3);
 
 	var marker4 = new GMarker(new GLatLng(29.3591306,-99.1774917));
-	GEvent.addListener(marker4, 'click', function() { marker4.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Hondo Air Field Fly-In<br />Hondo, TX</div></div>"); });
+	GEvent.addListener(marker4, 'click', function() { marker4.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Hondo Air Field Fly-In</strong><br />Hondo, TX</div></div>"); });
 	map.addOverlay(marker4);
 
 	var marker5 = new GMarker(new GLatLng(32.218891,-96.079217));
-	GEvent.addListener(marker5, 'click', function() { marker5.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Thunder Over Cedar Creek Lake<br />Cedar Creek Resevoir, TX</div></div>"); });
+	GEvent.addListener(marker5, 'click', function() { marker5.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Thunder Over Cedar Creek Lake</strong><br />Cedar Creek Resevoir, TX</div></div>"); });
 	map.addOverlay(marker5);
 
 	var marker6 = new GMarker(new GLatLng(43.995821,-88.551082));
-	GEvent.addListener(marker6, 'click', function() { marker6.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>2012 EAA AirVenture Oshkosh<br />Oshkosh, WI</div></div>"); });
+	GEvent.addListener(marker6, 'click', function() { marker6.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>2012 EAA AirVenture Oshkosh</strong><br />Oshkosh, WI</div></div>"); });
 	map.addOverlay(marker6);
 
 	var marker7 = new GMarker(new GLatLng(35.9034069,-89.3972944));
-	GEvent.addListener(marker7, 'click', function() { marker7.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Hall Airshow 2012<br />Hall, TN</div></div>"); });
+	GEvent.addListener(marker7, 'click', function() { marker7.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Hall Airshow 2012</strong><br />Hall, TN</div></div>"); });
 	map.addOverlay(marker7);
 	34.351763	-85.153527
 
 	var marker8 = new GMarker(new GLatLng(29.6073333,-95.1587500));
-	GEvent.addListener(marker8, 'click', function() { marker8.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Wings Over Houston<br />Houston, TX</div></div>"); });
+	GEvent.addListener(marker8, 'click', function() { marker8.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Wings Over Houston</strong><br />Houston, TX</div></div>"); });
 	map.addOverlay(marker8);
 
 	var marker9 = new GMarker(new GLatLng(31.9425278,-102.2019167));
-	GEvent.addListener(marker9, 'click', function() { marker9.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Airsho<br />Midland, TX</div></div>"); });
+	GEvent.addListener(marker9, 'click', function() { marker9.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Airsho</strong><br />Midland, TX</div></div>"); });
 	map.addOverlay(marker9);
 
 	var marker10 = new GMarker(new GLatLng(34.351763,-85.153527));
-	GEvent.addListener(marker10, 'click', function() { marker10.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>2012 Wings Over North Georgia Air Show<br />Rome, GA</div></div>"); });
+	GEvent.addListener(marker10, 'click', function() { marker10.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>2012 Wings Over North Georgia Air Show</strong><br />Rome, GA</div></div>"); });
 	map.addOverlay(marker10);
 	
 	var marker11 = new GMarker(new GLatLng(39.819348,-84.047985));
-	GEvent.addListener(marker11, 'click', function() { marker11.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Doolittle Tokyo Raiders Reunion<br />Dayton, OH</div></div>"); });
+	GEvent.addListener(marker11, 'click', function() { marker11.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Doolittle Tokyo Raiders Reunion</strong><br />Dayton, OH</div></div>"); });
 	map.addOverlay(marker11);
 	
 	var marker12 = new GMarker(new GLatLng(38.266205,-85.737258));
-	GEvent.addListener(marker12, 'click', function() { marker12.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>2012 Thunder Air Show<br />Louisville, KY</div></div>"); });
+	GEvent.addListener(marker12, 'click', function() { marker12.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>2012 Thunder Air Show</strong><br />Louisville, KY</div></div>"); });
 	map.addOverlay(marker12);
 	
 	var marker13 = new GMarker(new GLatLng(32.416487,-99.851475));
-	GEvent.addListener(marker13, 'click', function() { marker13.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Dyess Air Force Base Airfest/Open House<br />Abilene, TX</div></div>"); });
+	GEvent.addListener(marker13, 'click', function() { marker13.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Dyess Air Force Base Airfest/Open House</strong><br />Abilene, TX</div></div>"); });
 	map.addOverlay(marker13);
 	
 	var marker14 = new GMarker(new GLatLng(32.5776042,-96.7175028));
-	GEvent.addListener(marker14, 'click', function() { marker14.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>2012 Warbirds On Parade<br />Abilene, TX</div></div>"); });
+	GEvent.addListener(marker14, 'click', function() { marker14.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'<strong>>2012 Warbirds On Parade</strong><br />Abilene, TX</div></div>"); });
 	map.addOverlay(marker14);
 	
 	var marker15 = new GMarker(new GLatLng(32.9876389,-97.3188056));
-	GEvent.addListener(marker15, 'click', function() { marker15.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Alliance AirShow<br />Alliance, TX</div></div>"); });
+	GEvent.addListener(marker15, 'click', function() { marker15.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Alliance AirShow</strong><br />Alliance, TX</div></div>"); });
 	map.addOverlay(marker15);
 	
 	var marker16 = new GMarker(new GLatLng(25.9068333,-97.4258333));
-	GEvent.addListener(marker16, 'click', function() { marker16.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'>Air Fiesta 2012<br />Brownsville, TX</div></div>"); });
+	GEvent.addListener(marker16, 'click', function() { marker16.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Air Fiesta 2012</strong><br />Brownsville, TX</div></div>"); });
 	map.addOverlay(marker16);
 	
 
