--- a/app/views/pages/map_0.html.erb
+++ b/app/views/pages/map_0.html.erb
@@ -4,8 +4,8 @@
 
 <h1>Operations Map</h1>
 
-<p>A summary of the locations and events for 2012</p>
+<p>A summary of the locations and events for Devil Dog in 2012. (click on markers for more inforamtion)</p>
 
  <span class="footer" style="cursor: pointer;" onclick="map.setCenter(new GLatLng(40.0000, -97.0000), 4);">[ <u>reset map</u> ]</span>
-
+<br /><br />
 <div id="map" style="width: 800px; height: 533px"></div>
