fixed typos renamed map page

--- a/app/views/layouts/map_layout.html.erb
+++ b/app/views/layouts/map_layout.html.erb
@@ -20,7 +20,7 @@
         map.addControl(new GMapTypeControl());
         map.addControl(new GSmallMapControl());
         map.addControl(new GScaleControl());
-        map.setCenter(new GLatLng(38.0000, -97.0000), 4, G_HYBRID_MAP);
+        map.setCenter(new GLatLng(38.0000, -97.0000), 4, G_NORMAL_MAP);
 
 
 	var marker1 = new GMarker(new GLatLng(31.1519004,-97.4076629));
