finished out adding devise authentication - needs testing, esp roles and sending emails

--- a/public/stylesheets/web_style.css
+++ b/public/stylesheets/web_style.css
@@ -692,3 +692,13 @@ img.fr {
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 12px;
   }
+
+#alert {
+  font-size: 1.1em;
+  text-align: center;
+  font-style: italic;
+  padding: 8px;
+  color: #333;
+  background: #ffbbad;
+  border: 1px solid #990000;
+  }
